# solana-counter-frontend-dapp

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  package.json
anchor/programs/solana-dapp-counter-frontend/: Cargo.toml
anchor/programs/solana-dapp-counter-frontend/src/: lib.rs
anchor/src/: index.ts  solana-dapp-counter-frontend-exports.ts
anchor/tests/: solana-dapp-counter-frontend.spec.ts
web/app/: layout.tsx
web/app/solana-dapp-counter-frontend/: page.tsx
web/components/solana-dapp-counter-frontend/: solana-dapp-counter-frontend-data-access.tsx  solana-dapp-counter-frontend-feature.tsx  solana-dapp-counter-frontend-ui.tsx
